# bevy-beginner

./: Cargo.toml
src/: assets.rs  game.rs  main.rs
